# Segobe

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: docker-publish.yml  python-publish.yml  testpypi-publish.yml
docs/: detailed_overview.md
obi_segval/: CLI.py  __init__.py  __main__.py  evaluator.py  plotter.py
segobe/: CLI.py  __main__.py  evaluator.py  plotter.py  utils.py
